# survival.vallentin.dev

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  localhost.sh  package-lock.json  package.json
bake/: Cargo.toml  askama.toml
bake/src/: main.rs  md.rs  post.rs  templates.rs
deploy/: cert.sh  deploy.sh  install.sh  nginx.conf  pack.sh
posts/: hello.md  interactive-hints.md  making-graphics-is-tricky.md
www/: bg.html  index.html
www/css/: _reset.scss  style.scss
www/img/: bg.aseprite  coming-soon.aseprite  favicon.aseprite  planned.aseprite  player.aseprite  zombie.aseprite
www/templates/: base.html.jinja  blog.html.jinja  index.html.jinja  page.html.jinja  post.html.jinja
www/templates/partials/: header.html.jinja  posts.html.jinja
